[package]
name = "bolt"
version = "0.1.0"
edition = "2024"
description = "A high-performance load testing tool with API debugging capabilities"
authors = ["Waylon Wang <long.wang@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/waylondev/bolt"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif", "dep:console"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
# Async runtime - 2024/2025 最新稳定版
tokio = { version = "1.38", features = ["full"] }

# HTTP clients - 混合策略
# reqwest: API 调试 (易用性优先)
# hyper: 高性能压测 (性能优先)
reqwest = { version = "0.12", features = ["json", "default-tls"] }
hyper = { version = "1.5", features = ["full"] }

# HTTP/2 support for hyper
hyper-util = { version = "0.1", features = ["full"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
console = { version = "0.15", optional = true }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
regex = "1.11"
async-trait = "0.1"
http = "1.0"

# High-performance utilities
parking_lot = "0.12"
ahash = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tokio-test = "0.4.4"

[[bin]]
name = "bolt"
path = "src/main.rs"